--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.9.1 | June 15, 2022
+// Version: 9.9.2 | June 27, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -113,7 +113,7 @@ alias packet_rate packet_rate_standard
 alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto"
 alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_high;alias snapshot_buffer_level echo snapshot_buffer=high"
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
-alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer=low"
+alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer_low"
 alias snapshot_buffer_custom"alias snapshot_buffer_auto;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
 alias snapshot_buffer_anim"snapshot_buffer_custom;cl_interp 0.1;setinfo cl_interp 0.1;alias snapshot_buffer_level echo snapshot_buffer=anim"
 
@@ -164,7 +164,6 @@ alias bandwidth_2.5Mbps"rate 327680;alias bandwidth_level echo bandwidth=2.5Mbps
 alias bandwidth_3.0Mbps"rate 393216;alias bandwidth_level echo bandwidth=3.0Mbps"
 alias bandwidth_4.0Mbps"rate 524288;alias bandwidth_level echo bandwidth=4.0Mbps"
 alias bandwidth_6.0Mbps"rate 786432;alias bandwidth_level echo bandwidth=6.0Mbps"
-alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbps"
 
 alias bandwidth bandwidth_1.0Mbps
 
@@ -1701,7 +1700,6 @@ alias packet_rate=max"alias packet_rate packet_rate_max"
 alias snapshot_buffer=auto"alias snapshot_buffer snapshot_buffer_auto"
 alias snapshot_buffer=high"alias snapshot_buffer snapshot_buffer_high"
 alias snapshot_buffer=safe"alias snapshot_buffer snapshot_buffer_safe"
-alias snapshot_buffer=low"alias snapshot_buffer snapshot_buffer_low"
 alias snapshot_buffer=custom"alias snapshot_buffer snapshot_buffer_custom"
 alias snapshot_buffer=anim"alias snapshot_buffer snapshot_buffer_anim"
 alias packet_size=small"alias packet_size packet_size_small"
@@ -1720,7 +1718,7 @@ alias bandwidth=2.5Mbps"alias bandwidth bandwidth_2.5Mbps"
 alias bandwidth=3.0Mbps"alias bandwidth bandwidth_3.0Mbps"
 alias bandwidth=4.0Mbps"alias bandwidth bandwidth_4.0Mbps"
 alias bandwidth=6.0Mbps"alias bandwidth bandwidth_6.0Mbps"
-alias bandwidth=8.0Mbps"alias bandwidth bandwidth_8.0Mbps"
+alias bandwidth=8.0Mbps"alias bandwidth bandwidth_6.0Mbps"
 alias download=auto"alias download download_auto"
 alias download=all"alias download download_all"
 alias download=nosounds"alias download download_nosounds"
