--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -32,7 +32,7 @@
 // standard, congestion
 
 //snapshot_buffer=auto
-// auto, low, safe, high, custom, anim
+// auto, safe, high, custom, anim
 
 //packet_size=speed
 // speed, saver, conservative, small
