remove blocky lightmaps (non-functional)

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -269,8 +269,6 @@ alias lod
 //r_worldlights 0 // Disable world lights
 //mat_disable_lightwarp 0 // Enable light warps
 //mat_disable_lightwarp 1 // Disable light warps
-//mat_filterlightmaps 1 // Filter lightmaps
-//mat_filterlightmaps 0 // Blocky lightmaps
 //mat_reducefillrate 0 // Increase shading quality
 //mat_reducefillrate 1 // Simplify material shading and use some DirectX 8 features
 //r_dopixelvisibility 1 // Use pixel visibility system instead of line traces
@@ -285,15 +283,13 @@ alias lod
 mat_softwarelighting 0 // Make sure we use the GPU
 r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache takes up the hunk
 
-alias lightmaps_off"toggle mat_filterlightmaps"
-
-alias lighting_very_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=very_low"
-alias lighting_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=low"
-alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=medium"
-alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium_high"
-alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
-alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=very_high"
-alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin 0;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=ultra"
+alias lighting_very_low"r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=very_low"
+alias lighting_low"r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=low"
+alias lighting_medium"r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=medium"
+alias lighting_medium_high"r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium_high"
+alias lighting_high"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
+alias lighting_very_high"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=very_high"
+alias lighting_ultra"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin 0;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=ultra"
 
 alias lighting
 
@@ -1951,5 +1947,5 @@ alias restore_config"exec autoexec.cfg"
 alias run_game_overrides"exec comfig/game_overrides.cfg"
 alias game_overrides"cheap_water_override;detail_props_override;shadowlod_override"
 
-alias game_overrides_once"match_hud_once;lightmaps_override;game_overrides_once_c"
+alias game_overrides_once"match_hud_once;game_overrides_once_c"
 block_game_overrides_once
