--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,6 +144,7 @@ plugins:
   - macros
   - social
   - mike:
+      alias_type: copy
       canonical_version: latest
   - git-revision-date-localized:
       type: date
