--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,4 +4,5 @@ mkdocs-material
 mkdocs-minify-plugin
 mkdocs-redirects
 mkdocs-macros-plugin
+mkdocs-git-committers-plugin-2
 mkdocs-git-revision-date-localized-plugin
