update docs build and mkdocs stuff
also update actions versions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,13 +13,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Track Docs Branch
-      run: git fetch origin docs:docs && git branch -u origin/docs docs
-    - uses: actions/setup-python@v2
+      run: git branch -u origin/docs docs
+    - uses: actions/setup-python@v4
       with:
         python-version: 3.x
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         key: ${{ github.ref }}
         path: .cache
@@ -46,10 +48,14 @@ jobs:
       run: git fetch --tags -f
     - name: Build docs (latest)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release' }}
-      run: mike deploy -b docs -up $(git describe --tags --abbrev=0) latest page
+      run: mike deploy --alias-type copy -b docs -up $(git describe --tags --abbrev=0) latest page
+      env:
+        GH_TOKEN: ${{secrets.PRIVATE_REPO_TOKEN}}
     - name: Build docs (develop)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
-      run: mike deploy -b docs -p dev
+      run: mike deploy --alias-type copy -b docs -p dev
+      env:
+        GH_TOKEN: ${{secrets.PRIVATE_REPO_TOKEN}}
     - name: Build docs
       if: ${{ github.event_name == 'pull_request' }}
-      run: mike deploy --config-file mkdocs-pr.yml -u $(git describe --tags) latest
+      run: mike deploy --config-file mkdocs.base.yml -u $(git describe --tags) latest
