track not upstream

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Track Docs Branch
-      run: git branch -u origin/docs docs
+      run: git branch docs -t origin/docs
     - uses: actions/setup-python@v4
       with:
         python-version: 3.x
