--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install native dependencies
       run: sudo apt-get install libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
     - name: Install Material for MkDocs Insiders
-      run: pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git
+      run: pip install wheel git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git
       if: ${{ github.repository_owner == 'mastercomfig' && github.event_name != 'pull_request' }}
       env:
         GH_TOKEN: ${{secrets.PRIVATE_REPO_TOKEN}}
