--- a/config/mastercomfig/cfg/listenserver.cfg
+++ b/config/mastercomfig/cfg/listenserver.cfg
@@ -3,4 +3,4 @@ mp_idledealmethod 0 // Disable AFK automatic kick
 mp_maxrounds 0 // Disable Casual/Competitive imposed limits (the two dots that appears when using the Match HUD)
 mp_winlimit 0 // ^
 tf_mvm_min_players_to_start 1 // Start MvM with 1 player
-exec overrides/listenserver.cfg;exec user/listenserver.cfg // Run custom listenserver
+exec overrides/listenserver.cfg // Run custom listenserver
