--- a/config/cfg/presets/ultra.cfg
+++ b/config/cfg/presets/ultra.cfg
@@ -26,7 +26,7 @@ ragdolls=high
 jigglebones=force_on
 sheens_speed=slow
 sheens_tint=high
-textures=very_high
+textures=ultra
 ropes=ultra
 vsync=off
 hud_player_model=on
