--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.9.2 | June 27, 2022
+// Version: 9.9.3 | July 8, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -849,6 +849,7 @@ alias textures_low"mat_filtertextures 1;mat_picmip 2;mat_disable_fancy_blending 
 alias textures_medium"mat_filtertextures 1;mat_picmip 1;mat_disable_fancy_blending 0;alias textures_level echo textures=medium"
 alias textures_high"mat_filtertextures 1;mat_picmip 0;mat_disable_fancy_blending 0;alias textures_level echo textures=high"
 alias textures_very_high"mat_filtertextures 1;mat_picmip -1;mat_disable_fancy_blending 0;alias textures_level echo textures=very_high"
+alias textures_ultra"mat_filtertextures 1;mat_picmip -10;mat_disable_fancy_blending 0;alias textures_level echo textures=ultra"
 
 alias textures
 
@@ -1833,6 +1834,7 @@ alias textures=low"alias textures textures_low"
 alias textures=medium"alias textures textures_medium"
 alias textures=high"alias textures textures_high"
 alias textures=very_high"alias textures textures_very_high"
+alias textures=ultra"alias textures textures_ultra"
 alias ropes=off"alias ropes ropes_off"
 alias ropes=low"alias ropes ropes_low"
 alias ropes=high"alias ropes ropes_high"
