--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -128,8 +128,8 @@
 //sheens_tint=high
 // full, high, medium, low
 
-//textures=very_high
-// very_high, high, medium, low, very_low
+//textures=ultra
+// ultra, very_high, high, medium, low, very_low
 
 //ropes=ultra
 // ultra, high, low, off
