--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.9.2 | June 27, 2022
+// Version: 9.9.3 | July 8, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -529,6 +529,7 @@ tf_sheen_alpha_firstperson .5 // Intensity of tint
 // '-- Textures --'
 // ----------------
 
+//mat_picmip -10 // Maximum quality textures
 //mat_picmip -1 // Very High quality textures
 //mat_picmip 0 // High quality textures
 //mat_picmip 1 // Medium quality textures
@@ -1259,7 +1260,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.9.2 | June 27, 2022"
+alias version_comfig"echo mastercomfig version: 9.9.3 | July 8, 2022"
 
 // Echo
 echo""
@@ -1273,8 +1274,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.9.2 loaded"
-echo"  June 27, 2022"
+echo"  mastercomfig 9.9.3 loaded"
+echo"  June 8, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
