--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1218,7 +1218,7 @@ snd_async_spew_blocking 0 // Disable async spew
 //sc_joystick_map 0 // Scaled Cross analog joystick deadzone and extents
 //sc_joystick_map 1 // Concentric Mapping to Square analog joystick deadzone and extents
 //sc_look_sensitivity_scale 1 // Steam controller sensitivity scale
-//sc_pitch_sensitivity 1 // Additional pitch specific sensitivty
+//sc_pitch_sensitivity 1 // Additional pitch specific sensitivity
 //sc_pitch_sensitivity_default 1 // Default additional pitch specific sensitivity
 //sc_yaw_sensitivity 1 // Additional yaw specific sensitivity
 //sc_yaw_sensitivity_default 1 // Default additional yaw specific sensitivity
