--- a/mkdocs.base.yml
+++ b/mkdocs.base.yml
@@ -133,7 +133,19 @@ repo_url: 'https://github.com/mastercomfig/mastercomfig/'
 edit_uri: 'edit/release/docs/'
 plugins:
   - redirects: {redirect_maps: {'next_steps/troubleshoot.md': 'next_steps/quick_fixes.md'}}
-  - i18n: {default_language: en, search_reconfigure: false, languages: {en: English, pt: Português, ru: Pусский, es: Español, fr: Français, tr: Türkçe}}
+  - i18n:
+      default_language: en,
+      search_reconfigure: false
+      languages:
+        en: English
+        pt: Português
+        ru: Pусский
+        es: Español
+        fr: Français
+        tr: Türkçe
+      nav_translations:
+        ru:
+          Benchmarks: Тест
   - search: {separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'}
   - macros: {}
   - mike: {canonical_version: latest}
