--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,19 @@ INHERIT: mkdocs.base.yml
 plugins:
   - redirects: {redirect_maps: {'next_steps/troubleshoot.md': 'next_steps/quick_fixes.md'}}
   - social: {}
-  - i18n: {default_language: en, search_reconfigure: false, languages: {en: English, pt: Português, ru: Pусский, es: Español, fr: Français}}
+  - i18n:
+      default_language: en,
+      search_reconfigure: false
+      languages:
+        en: English
+        pt: Português
+        ru: Pусский
+        es: Español
+        fr: Français
+        tr: Türkçe
+      nav_translations:
+        ru:
+          Benchmarks: Тест
   - search: {separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'}
   - macros: {}
   - mike: {canonical_version: latest}
