--- a/mkdocs.base.yml
+++ b/mkdocs.base.yml
@@ -134,7 +134,7 @@ edit_uri: 'edit/release/docs/'
 plugins:
   - redirects: {redirect_maps: {'next_steps/troubleshoot.md': 'next_steps/quick_fixes.md'}}
   - i18n:
-      default_language: en,
+      default_language: en
       search_reconfigure: false
       languages:
         en: English
