--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "remark .",
+    "checklinks": "remark . --use remark-lint-no-dead-urls",
+    "prose": "remark . --use remark-lint-write-good"
   },
   "repository": {
     "type": "git",
@@ -26,61 +28,72 @@
   },
   "homepage": "https://github.com/mastercomfig/mastercomfig#readme",
   "devDependencies": {
-    "remark-cli": "^9.0.0",
-    "remark-lint": "^8.0.0",
-    "remark-lint-blockquote-indentation": "^2.0.1",
-    "remark-lint-checkbox-character-style": "^3.0.0",
-    "remark-lint-checkbox-content-indent": "^3.0.0",
-    "remark-lint-definition-spacing": "^2.0.1",
-    "remark-lint-emphasis-marker": "^2.0.1",
-    "remark-lint-fenced-code-flag": "^2.0.1",
-    "remark-lint-fenced-code-marker": "^2.0.1",
-    "remark-lint-file-extension": "^1.0.5",
-    "remark-lint-final-definition": "^2.1.0",
-    "remark-lint-final-newline": "^1.0.5",
-    "remark-lint-first-heading-level": "^2.0.1",
-    "remark-lint-hard-break-spaces": "^2.0.1",
-    "remark-lint-heading-increment": "^2.0.1",
-    "remark-lint-heading-style": "^2.0.1",
-    "remark-lint-linebreak-style": "^2.0.1",
-    "remark-lint-link-title-style": "^2.0.1",
-    "remark-lint-list-item-bullet-indent": "^3.0.0",
-    "remark-lint-list-item-content-indent": "^2.0.1",
-    "remark-lint-list-item-indent": "^2.0.1",
-    "remark-lint-list-item-spacing": "^3.0.0",
-    "remark-lint-no-auto-link-without-protocol": "^2.0.1",
-    "remark-lint-no-blockquote-without-marker": "^4.0.0",
-    "remark-lint-no-consecutive-blank-lines": "^3.0.0",
-    "remark-lint-no-duplicate-defined-urls": "^1.0.1",
-    "remark-lint-no-duplicate-definitions": "^2.0.1",
-    "remark-lint-no-duplicate-headings": "^2.0.1",
-    "remark-lint-no-emphasis-as-heading": "^2.0.1",
-    "remark-lint-no-empty-url": "^2.0.1",
-    "remark-lint-no-file-name-articles": "^1.0.5",
-    "remark-lint-no-file-name-consecutive-dashes": "^1.0.5",
-    "remark-lint-no-file-name-mixed-case": "^1.0.5",
-    "remark-lint-no-file-name-outer-dashes": "^1.0.6",
-    "remark-lint-no-heading-content-indent": "^3.0.0",
-    "remark-lint-no-heading-indent": "^3.0.0",
-    "remark-lint-no-heading-like-paragraph": "^2.0.1",
-    "remark-lint-no-inline-padding": "^3.0.0",
-    "remark-lint-no-literal-urls": "^2.0.1",
-    "remark-lint-no-multiple-toplevel-headings": "^2.0.1",
-    "remark-lint-no-shell-dollars": "^2.0.2",
-    "remark-lint-no-shortcut-reference-image": "^2.0.1",
-    "remark-lint-no-shortcut-reference-link": "^2.0.1",
-    "remark-lint-no-table-indentation": "^3.0.0",
-    "remark-lint-no-tabs": "^2.0.1",
-    "remark-lint-no-undefined-references": "^3.0.0",
-    "remark-lint-no-unneeded-full-reference-image": "^2.0.1",
-    "remark-lint-no-unused-definitions": "^2.0.1",
-    "remark-lint-ordered-list-marker-style": "^2.0.1",
-    "remark-lint-ordered-list-marker-value": "^2.0.1",
-    "remark-lint-rule-style": "^2.0.1",
-    "remark-lint-strong-marker": "^2.0.1",
-    "remark-lint-table-cell-padding": "^3.0.0",
-    "remark-lint-table-pipe-alignment": "^2.0.1",
-    "remark-lint-table-pipes": "^3.0.0",
-    "remark-lint-unordered-list-marker-style": "^2.0.1"
+    "eslint": "^8.22.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "remark-cli": "^11.0.0",
+    "remark-lint": "^9.1.1",
+    "remark-lint-blockquote-indentation": "^3.1.1",
+    "remark-lint-checkbox-character-style": "^4.1.1",
+    "remark-lint-checkbox-content-indent": "^4.1.1",
+    "remark-lint-definition-case": "^3.1.1",
+    "remark-lint-definition-spacing": "^3.1.1",
+    "remark-lint-emphasis-marker": "^3.1.1",
+    "remark-lint-fenced-code-flag": "^3.1.1",
+    "remark-lint-fenced-code-marker": "^3.1.1",
+    "remark-lint-file-extension": "^2.1.1",
+    "remark-lint-final-definition": "^3.1.1",
+    "remark-lint-final-newline": "^2.1.1",
+    "remark-lint-first-heading-level": "^3.1.1",
+    "remark-lint-hard-break-spaces": "^3.1.1",
+    "remark-lint-heading-increment": "^3.1.1",
+    "remark-lint-heading-style": "^3.1.1",
+    "remark-lint-heading-whitespace": "^1.0.0",
+    "remark-lint-linebreak-style": "^3.1.1",
+    "remark-lint-link-title-style": "^3.1.1",
+    "remark-lint-list-item-bullet-indent": "^4.1.1",
+    "remark-lint-list-item-indent": "^3.1.1",
+    "remark-lint-list-item-spacing": "^4.1.1",
+    "remark-lint-match-punctuation": "^0.2.1",
+    "remark-lint-no-blockquote-without-marker": "^5.1.1",
+    "remark-lint-no-consecutive-blank-lines": "^4.1.2",
+    "remark-lint-no-dead-urls": "^1.1.0",
+    "remark-lint-no-duplicate-defined-urls": "^2.1.1",
+    "remark-lint-no-duplicate-definitions": "^3.1.1",
+    "remark-lint-no-duplicate-headings": "^3.1.1",
+    "remark-lint-no-emphasis-as-heading": "^3.1.1",
+    "remark-lint-no-empty-sections": "^4.0.0",
+    "remark-lint-no-empty-url": "^3.1.1",
+    "remark-lint-no-file-name-articles": "^2.1.1",
+    "remark-lint-no-file-name-consecutive-dashes": "^2.1.1",
+    "remark-lint-no-file-name-outer-dashes": "^2.1.1",
+    "remark-lint-no-heading-content-indent": "^4.1.1",
+    "remark-lint-no-heading-indent": "^4.1.1",
+    "remark-lint-no-heading-like-paragraph": "^3.1.1",
+    "remark-lint-no-inline-padding": "^4.1.1",
+    "remark-lint-no-literal-urls": "^3.1.1",
+    "remark-lint-no-multiple-toplevel-headings": "^3.1.1",
+    "remark-lint-no-reference-like-url": "^3.1.1",
+    "remark-lint-no-shell-dollars": "^3.1.1",
+    "remark-lint-no-shortcut-reference-image": "^3.1.1",
+    "remark-lint-no-shortcut-reference-link": "^3.1.1",
+    "remark-lint-no-table-indentation": "^4.1.1",
+    "remark-lint-no-tabs": "^3.1.1",
+    "remark-lint-no-undefined-references": "^4.1.1",
+    "remark-lint-no-unneeded-full-reference-image": "^3.1.1",
+    "remark-lint-no-unneeded-full-reference-link": "^3.1.1",
+    "remark-lint-no-unused-definitions": "^3.1.1",
+    "remark-lint-no-url-trailing-slash": "^3.0.1",
+    "remark-lint-ordered-list-marker-style": "^3.1.1",
+    "remark-lint-ordered-list-marker-value": "^3.1.1",
+    "remark-lint-rule-style": "^3.1.1",
+    "remark-lint-strong-marker": "^3.1.1",
+    "remark-lint-table-cell-padding": "^4.1.2",
+    "remark-lint-table-pipe-alignment": "^3.1.1",
+    "remark-lint-table-pipes": "^4.1.1",
+    "remark-lint-unordered-list-marker-style": "^3.1.1",
+    "remark-lint-write-good": "^1.2.0"
   }
 }
