--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,10 +23,15 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: 3.x
+    - uses: pnpm/action-setup@v2.2.2
     - uses: actions/cache@v3
       with:
         key: ${{ github.ref }}
         path: .cache
+    - name: Lint Docs
+      run: |
+        pnpm i
+        pnpm lint
     - name: Update pip
       run: python -m pip install -U pip setuptools
     - name: Set Git author
