--- a/.remarkrc
+++ b/.remarkrc
@@ -6,6 +6,7 @@
       "unchecked": " "
     }],
     "remark-lint-checkbox-content-indent",
+    "remark-lint-definition-case",
     "remark-lint-definition-spacing",
     ["remark-lint-emphasis-marker", "_"],
     "remark-lint-fenced-code-flag",
@@ -17,23 +18,23 @@
     "remark-lint-hard-break-spaces",
     "remark-lint-heading-increment",
     ["remark-lint-heading-style", "atx"],
+    "remark-lint-heading-whitespace",
     ["remark-lint-linebreak-style", "unix"],
     ["remark-lint-link-title-style", "\""],
     "remark-lint-list-item-bullet-indent",
-    "remark-lint-list-item-content-indent",
     ["remark-lint-list-item-indent", "space"],
     "remark-lint-list-item-spacing",
-    "remark-lint-no-auto-link-without-protocol",
+    ["remark-lint-match-punctuation", ["“”", "『』", "（）", "《》", "「」", "【】"]],
     "remark-lint-no-blockquote-without-marker",
     "remark-lint-no-consecutive-blank-lines",
     "remark-lint-no-duplicate-defined-urls",
     "remark-lint-no-duplicate-definitions",
     "remark-lint-no-duplicate-headings",
     "remark-lint-no-emphasis-as-heading",
+    "remark-lint-no-empty-sections",
     "remark-lint-no-empty-url",
     "remark-lint-no-file-name-articles",
     "remark-lint-no-file-name-consecutive-dashes",
-    "remark-lint-no-file-name-mixed-case",
     "remark-lint-no-file-name-outer-dashes",
     "remark-lint-no-heading-content-indent",
     "remark-lint-no-heading-indent",
@@ -41,6 +42,7 @@
     "remark-lint-no-inline-padding",
     "remark-lint-no-literal-urls",
     "remark-lint-no-multiple-toplevel-headings",
+    "remark-lint-no-reference-like-url",
     "remark-lint-no-shell-dollars",
     "remark-lint-no-shortcut-reference-image",
     "remark-lint-no-shortcut-reference-link",
@@ -48,7 +50,9 @@
     "remark-lint-no-tabs",
     "remark-lint-no-undefined-references",
     "remark-lint-no-unneeded-full-reference-image",
+    "remark-lint-no-unneeded-full-reference-link",
     "remark-lint-no-unused-definitions",
+    "remark-lint-no-url-trailing-slash",
     ["remark-lint-ordered-list-marker-style", "."],
     "remark-lint-ordered-list-marker-value",
     ["remark-lint-rule-style", "---"],
