some various clean up

--- a/config/cfg/presets/low.cfg
+++ b/config/cfg/presets/low.cfg
@@ -13,7 +13,7 @@ pyrovision=low
 romevision=off
 motion_blur=off
 anti_aliasing=off
-texture_filter=bilinear
+texture_filter=trilinear
 characters=very_low
 decals=off
 decals_models=off
@@ -26,7 +26,7 @@ ragdolls=off
 jigglebones=off
 sheens_speed=slow
 sheens_tint=high
-textures=very_low
+textures=low
 ropes=off
 vsync=off
 hud_player_model=off
