--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -92,8 +92,7 @@ cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid iss
 net_maxroutable 1200;net_maxfragments 1200 // Use max recommended packet size by Steam to avoid split packets more to save CPU time and packet overhead
 //net_maxroutable 956;net_maxfragments 956 // Use a reliable packet size for routers that have trouble with larger sizes
 //net_maxroutable 512;net_maxfragments 512 // Use minimum size
-net_compresspackets 0;net_compresspackets_minsize 4097 // Skip packet compression on client since packets are small anyway
-//net_compresspackets 1;net_compresspackets_minsize 200 // Compress a few serverbound packets for maximum data saving
+net_compresspackets 1;net_compresspackets_minsize 200 // Compress a few serverbound packets for maximum data saving
 
 // -----------------------
 // '-- Game Bandwidth  --'
@@ -161,10 +160,6 @@ r_lod -1 // Use r_rootlod to properly fade through LODs(start at r_rootlod, and 
 
 //r_ambientboost 1 // Boosts reflected light, gives you vision advantage, especially in darker environments
 r_ambientboost 0 // Disable to save the small amount of CPU this uses
-//r_ambientmin .4 // Allow for ambient boosting even in brighter light levels, makes characters stand out
-//r_ambientmin .3 // Use TF2 default ambient boost threshold
-//r_ambientmin .2 // Ambient boost less often, realistic darkness
-//r_ambientmin 1.1 // Ambient boost every time
 //r_rimlight 1 // Rimlighting is a distinct design choice in TF2 for better visibility of classes
 r_rimlight 0 // Disable light around character edges, very small FPS increase, rimlight uses GPU only
 //mat_phong 1 // Use a phong shader for shading/reflection
@@ -535,7 +530,7 @@ tf_sheen_alpha_firstperson .5 // Intensity of tint
 //mat_picmip 1 // Medium quality textures
 mat_picmip 2 // Low quality textures
 //mat_filtertextures 1 // Filter textures
-mat_filtertextures 0 // Blocky textures
+//mat_filtertextures 0 // Blocky textures
 //mat_disable_fancy_blending 0 // Enable fancy blending of textures
 mat_disable_fancy_blending 1 // Disable fancy blending of textures
 
