lowercase mastercomfig and add turkish install nav

--- a/mkdocs.base.yml
+++ b/mkdocs.base.yml
@@ -170,6 +170,7 @@ plugins:
           Install: Instalar
         tr:
           Clean Up: Temizleme
+          Install: Nasıl Kurulur
   - search: {separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'}
   - macros: {}
   - mike: {canonical_version: latest}
