--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -917,6 +917,7 @@ alias fpscap_30"mat_powersavingsmode 0;fps_max 30;alias fpscap_level echo fpscap
 alias fpscap_60"mat_powersavingsmode 0;fps_max 60;alias fpscap_level echo fpscap=60"
 alias fpscap_75"mat_powersavingsmode 0;fps_max 75;alias fpscap_level echo fpscap=75"
 alias fpscap_120"mat_powersavingsmode 0;fps_max 120;alias fpscap_level echo fpscap=120"
+alias fpscap_142"mat_powersavingsmode 0;fps_max 142;alias fpscap_level echo fpscap=142"
 alias fpscap_144"mat_powersavingsmode 0;fps_max 144;alias fpscap_level echo fpscap=144"
 alias fpscap_160"mat_powersavingsmode 0;fps_max 160;alias fpscap_level echo fpscap=160"
 alias fpscap_165"mat_powersavingsmode 0;fps_max 165;alias fpscap_level echo fpscap=165"
